--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -2,8 +2,27 @@
 
 <h1 class="font-bold text-4xl mbe-4">New movie</h1>
 
-<%= render "form", movie: @movie %>
+<%= form_with(model: @movie, local: true) do |form| %>
+  <div class="mb-4">
+    <%= form.label :title, "Title" %>
+    <%= form.text_field :title, class: "form-control" %>
+  </div>
 
-<div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
-  <%= link_to "Back to movies", movies_path, class: "btn" %>
-</div>
+  <div class="mb-4">
+    <%= form.label :year, "Year Published" %>
+    <%= form.text_field :year, class: "form-control" %>
+  </div>
+
+  <div class="mb-4">
+    <%= form.label :description, "Description" %>
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
+    <%= link_to "Back to movies", movies_path, class: "btn" %>
+  </div>
+
+  <div class="mt-4">
+    <%= form.submit "Create Movie", class: "btn btn-primary" %>
+  </div>
+<% end %>
