--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -11,4 +11,9 @@
     <h4 class="font-medium leading-none">Year:</h4>
     <p class="leading-none"><%= movie.year %></p>
   </div>
+  <div class="movie-item">
+    h3><%= movie.title %></h3>
+    <p><%= movie.description %></p>
+    <p><%= movie.year %></p>
+  </div>
 </div>
