--- a/app/views/musics/_music.html.erb
+++ b/app/views/musics/_music.html.erb
@@ -11,4 +11,9 @@
     <h4 class="font-medium leading-none">Year:</h4>
     <p class="leading-none"><%= music.year %></p>
   </div>
+  <div class="music-item">
+    <h3><%= music.title %></h3>
+    <p><%= music.artist %></p>
+    <p><%= music.year %></p>
+  </div>
 </div>
