--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -11,4 +11,9 @@
     <h4 class="font-medium leading-none">Year:</h4>
     <p class="leading-none"><%= book.year %></p>
   </div>
+  <div class="book-item">
+    <h3><%= book.title %></h3>
+    <p><%= book.author %></p>
+    <p><%= book.year %></p>
+  </div>
 </div>
