--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: music, html: { contents: true }) do |form| %>
-  <% if music.errors.any? %>
+<%= form_with(model:@music, local: true) do |form| %>
+  <% if @music.errors.any? %>
     <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
-      <h2 class="font-medium leading-none"><%= pluralize(music.errors.count, "error") %> prohibited this music from being saved:</h2>
+      <h2 class="font-medium leading-none"><%= pluralize(@music.errors.count, "error") %> prohibited this music from being saved:</h2>
 
       <ul class="text-sm mis-3" style="list-style: disc">
-        <% music.errors.each do |error| %>
+        <% @music.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -22,7 +22,22 @@
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :year, class: "text-sm font-medium leading-none" %>
+    <%= form.label :album, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :album, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :description, class: "text-sm font-medium leading-none" %>
+    <%= form.text_area :description, class: "input", rows: 4 %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :genre, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :genre, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :year, "Year Published", class: "text-sm font-medium leading-none" %>
     <%= form.number_field :year, class: "input" %>
   </div>
 
