--- a/app/views/musics/_music.html.erb
+++ b/app/views/musics/_music.html.erb
@@ -7,13 +7,26 @@
     <h4 class="font-medium leading-none">Artist:</h4>
     <p class="leading-none"><%= music.artist %></p>
   </div>
+  <% if music.album.present? %>
+    <div class="flex flex-col gap-half">
+    <h4 class="font-medium leading-none">Album:</h4>
+    <p class="leading-none"><%= music.album %></p>
+    </div>
+  <% end %>
+  <% if music.description.present? %>
+    <div class="flex flex-col gap-half">
+    <h4 class="font-medium leading-none">Description:</h4>
+    <p class="leading-none"><%= music.description %></p>
+    </div>
+  <% end %>
+  <% if music.genre.present? %>
+    <div class="flex flex-col gap-half">
+    <h4 class="font-medium leading-none">Genre:</h4>
+    <p class="leading-none"><%= music.genre %></p>
+    </div>
+  <% end %>
   <div class="flex flex-col gap-half">
     <h4 class="font-medium leading-none">Year:</h4>
     <p class="leading-none"><%= music.year %></p>
-  </div>
-  <div class="music-item">
-    <h3><%= music.title %></h3>
-    <p><%= music.artist %></p>
-    <p><%= music.year %></p>
   </div>
 </div>
