--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,15 +1,24 @@
-<% content_for :title, "Musics" %>
+<% content_for :title, "Music" %>
 
 <div class="flex items-center justify-between mbe-4">
   <h1 class="font-bold text-4xl">Musics</h1>
   <%= link_to "New music", new_music_path, class: "btn btn--primary" %>
 </div>
 
-<div id="musics" class="flex flex-col" style="gap: 2rem;">
+<div id="music" class="flex flex-col" style="gap: 2rem;">
   <% @musics.each do |music| %>
     <div class="flex flex-col items-start gap">
-      <%= render music %>
-      <%= link_to "Show this music", music, class: "btn" %>
+    <h1>Title: <%= music.title %> </h1>
+    <p>Artist: <%= music.artist %></p>
+    <% if music.album.present? %>
+    <p>Album: <%= music.album %></p>
+    <% end %>
+    <% if music.description.present? %>
+    <p>Description: <%= music.description %></p>
+    <% end %>
+    <p>Release Date: <%= music.year %></p>
+    <p>Genre: <%= music.genre %></p>
+    <%= link_to "Show this music", music, class: "btn" %>
     </div>
   <% end %>
 </div>
