--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -2,28 +2,7 @@
 
 <h1 class="font-bold text-4xl mbe-4">New music</h1>
 
-<%= form_with(model: @music, local: true) do |form| %>
-  
-  <div class="mb-4">
-    <%= form.label :title, "Title" %>
-    <%= form.text_field :title, class: "form-control", id: "music_title" %>
-  </div>
-
-  <div class="mb-4">
-    <%= form.label :year, "Year Published" %>
-    <%= form.text_field :year, class: "form-control", id: "music_year", name: "music[year]" %>
-  </div>
-
-  <div class="mb-4">
-    <%= form.label :description, "Description" %>
-    <%= form.text_area :description, class: "form-control", id: "music_description" %>
-  </div>
-
-  <div class="mb-4">
-    <%= form.submit "Create Music", class: "btn btn-primary", id: "create_music_button" %>
-  </div>
-
-<% end %>
+<%= render "form", music: @music %>
 
 <div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
   <%= link_to "Back to musics", musics_path, class: "btn" %>
