--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,9 @@
-<div id="<%= dom_id book %>" class="flex flex-col gap">
+<div id="<%= dom_id(book) %>" class="flex flex-col gap">
+  <!-- Image display -->
+  <div class="flex justify-center">
+    <%= image_tag book.image, class: "book-image" if book.image.attached? %>
+  </div>
+
   <div class="flex flex-col gap-half">
     <h4 class="font-medium leading-none">Title:</h4>
     <p class="leading-none"><%= book.title %></p>
@@ -8,12 +13,16 @@
     <p class="leading-none"><%= book.author %></p>
   </div>
   <div class="flex flex-col gap-half">
-    <h4 class="font-medium leading-none">Year:</h4>
-    <p class="leading-none"><%= book.year %></p>
+    <h4 class="font-medium leading-none">Year Published:</h4>
+    <p class="leading-none"><%= book.year_published %></p>
   </div>
-  <div class="book-item">
-    <h3><%= book.title %></h3>
-    <p><%= book.author %></p>
-    <p><%= book.year %></p>
+  <div class="flex flex-col gap-half">
+    <h4 class="font-medium leading-none">Description:</h4>
+    <p class="leading-none"><%= book.description %></p>
+  </div>
+
+  <div class="flex gap-2 mt-2">
+    <%= link_to "Edit", edit_book_path(book), class: "btn btn--primary" %>
+    <%= link_to "Delete", book_path(book), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn--danger" %>
   </div>
 </div>
