--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_with(model: book) do |form| %>
+<%= form_with(model: book, local: true, html: { enctype: 'multipart/form-data' }) do |form| %>
   <% if book.errors.any? %>
     <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
       <h2 class="font-medium leading-none"><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
-
       <ul class="text-sm mis-3" style="list-style: disc">
         <% book.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -29,6 +28,12 @@
   <div class="flex flex-col items-start gap-half mbe-4">
     <%= form.label :author, class: "text-sm font-medium leading-none" %>
     <%= form.text_field :author, class: "input" %>
+  </div>
+
+  <!-- Image upload field -->
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :image, class: "text-sm font-medium leading-none" %>
+    <%= form.file_field :image, class: "input" %>
   </div>
 
   <div class="inline-flex items-center mbs-2 mie-1">
