--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,4 +7,37 @@
 <div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
   <%= link_to "Show this book", @book, class: "btn" %>
   <%= link_to "Back to books", books_path, class: "btn" %>
+  <%= link_to "Edit", edit_book_path(@book), class: "btn" %>
 </div>
+
+<%= form_with(model: @book, local: true) do |form| %>
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= form.label :author %>
+    <%= form.text_field :author %>
+  </div>
+
+  <div class="field">
+    <%= form.label :publication_date %>
+    <%= form.date_select :publication_date %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit "Confirm" %>
+  </div>
+<% end %>
