--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,33 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="text-2xl font-bold mb-4">Edit Profile</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "space-y-6" }) do |f| %>
+  <div>
+    <%= f.label :email, class: "block font-medium text-sm text-gray-700" %>
+    <%= f.email_field :email, autofocus: true, class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div>
+    <%= f.label :password, "Password (leave blank if you don't want to change it)", class: "block font-medium text-sm text-gray-700" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div>
+    <%= f.label :password_confirmation, class: "block font-medium text-sm text-gray-700" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div>
+    <%= f.label :current_password, "Current password (we need this to confirm your changes)", class: "block font-medium text-sm text-gray-700" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "mt-1 block w-full rounded-md border-gray-300 shadow-sm" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="flex justify-between items-center mt-4">
+    <%= f.submit "Update", class: "btn btn--primary" %>
+    <%= link_to "Back", root_path, class: "text-blue-600 hover:underline" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<hr class="my-6">
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+<h3 class="text-lg font-semibold">"Don't want an account?"</h3>
+<%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn--danger mt-2" %>
