--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,11 +6,15 @@
 </div>
 
 <div id="movies" class="flex flex-col" style="gap: 2rem;">
-  <% @movies.each do |movie| %>
-    <div class="flex flex-col items-start gap">
-      <%= render movie %> <!-- Adjust this line to render the movie -->
-      <%= link_to "Show this movie", movie, class: "btn" %>
-    </div>
+  <% if @movies.present? %>
+    <% @movies.each do |movie| %>
+      <div class="flex flex-col items-start gap">
+        <%= render partial: "movies/movie", locals: { movie: movie } %>
+        <%= link_to "Show this movie", movie, class: "btn" %>
+      </div>
+    <% end %>
+  <% else %>
+    <p>No movies found.</p>
   <% end %>
 </div>
 
@@ -20,11 +24,15 @@
 </div>
 
 <div id="books" class="flex flex-col" style="gap: 2rem;">
-  <% @books.each do |book| %>
-    <div class="flex flex-col items-start gap">
-      <%= render book %> <!-- Adjust this line to render the book -->
-      <%= link_to "Show this book", book, class: "btn" %>
-    </div>
+  <% if @books.present? %>
+    <% @books.each do |book| %>
+      <div class="flex flex-col items-start gap">
+        <%= render partial: "books/book", locals: { book: book } %>
+        <%= link_to "Show this book", book, class: "btn" %>
+      </div>
+    <% end %>
+  <% else %>
+    <p>No books found.</p>
   <% end %>
 </div>
 
@@ -37,7 +45,7 @@
   <% if @musics.present? %>
     <% @musics.each do |music| %>
       <div class="flex flex-col items-start gap">
-        <%= render music %>
+        <%= render partial: "musics/music", locals: { music: music } %>
         <%= link_to "Show this music", music, class: "btn" %>
       </div>
     <% end %>
