--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_with(model: music, html: { contents: true }) do |form| %>
+<%= form_with(model: music, local: true, html: { enctype: 'multipart/form-data' }) do |form| %>
   <% if music.errors.any? %>
     <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
       <h2 class="font-medium leading-none"><%= pluralize(music.errors.count, "error") %> prohibited this music from being saved:</h2>
-
       <ul class="text-sm mis-3" style="list-style: disc">
         <% music.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -26,7 +25,11 @@
     <%= form.number_field :year, class: "input" %>
   </div>
 
-  <div class="inline-flex items-center mbs-2 mie-1">
-    <%= form.submit class: "btn btn--primary" %>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :image, class: "text-sm font-medium leading-none" %>
+    <%= form.file_field :image, class: "input" %>
   </div>
-<% end %>
+
+  <div class="inline-flex items-center mbs-2 mie-1">
+    <%= form.submit "Save Music", class: "btn
