--- a/app/views/musics/_music.html.erb
+++ b/app/views/musics/_music.html.erb
@@ -1,4 +1,9 @@
-<div id="<%= dom_id music %>" class="flex flex-col gap">
+<div id="<%= dom_id(music) %>" class="flex flex-col gap">
+  <!-- Image display -->
+  <div class="flex justify-center">
+    <%= image_tag music.image, class: "music-image" if music.image.attached? %>
+  </div>
+
   <div class="flex flex-col gap-half">
     <h4 class="font-medium leading-none">Title:</h4>
     <p class="leading-none"><%= music.title %></p>
@@ -11,9 +16,13 @@
     <h4 class="font-medium leading-none">Year:</h4>
     <p class="leading-none"><%= music.year %></p>
   </div>
-  <div class="music-item">
-    <h3><%= music.title %></h3>
-    <p><%= music.artist %></p>
-    <p><%= music.year %></p>
+  <div class="flex flex-col gap-half">
+    <h4 class="font-medium leading-none">Description:</h4>
+    <p class="leading-none"><%= music.description %></p>
+  </div>
+
+  <div class="flex gap-2 mt-2">
+    <%= link_to "Edit", edit_music_path(music), class: "btn btn--primary" %>
+    <%= link_to "Delete", music_path(music), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn--danger" %>
   </div>
 </div>
