--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -9,5 +9,9 @@
 <div class="flex flex-wrap items-center gap mbs-6" style="--row-gap: .5rem">
   <%= link_to "Edit this music", edit_music_path(@music), class: "btn" %>
   <%= link_to "Back to musics", musics_path, class: "btn" %>
-  <%= button_to "Destroy this music", @music, method: :delete, class: "btn" %>
+  <%= button_to "Delete this Song", @music, method: :delete, class: "btn" %>
 </div>
+
+<%= link_to "Edit", edit_music_path(@music), class: "btn btn--primary" %>
+<%= button_to "Delete", music_path(@music), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn--danger" %>
+
