--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,9 @@
-<% if @movie.poster.attached? %>
-  <%= image_tag @movie.poster.variant(resize_to_limit: [300, 450]), class: "rounded mb-4 shadow-md" %>
-<% end %>
+#<% if @movie.poster.attached? %>
+ # <%= image_tag @movie.poster.variant(resize_to_limit: [300, 450]), class: "rounded mb-4 shadow-md" %>
+#<% end %>
+
+<% elsif movie.poster.attached? %>
+      <%= image_tag movie.poster, class: "movie-image rounded-lg shadow-md" %>
 
 <h1 class="text-2xl font-bold mb-2"><%= @movie.title %></h1>
 <p class="mb-1"><%= @movie.description %></p>
