--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -7,6 +7,8 @@
 <p class="mb-1">Release Date: <%= @movie.year %></p>
 <p class="mb-1">Rating: <%= @movie.rating %></p>
 <p class="mb-1">Director: <%= @movie.director %></p>
+<p class="mb-1">Franchise: <%= @movie.franchise %></p>
+<p class="mb-1">Description: <%= @movie.description %></p>
 
 
 <div class="flex flex-wrap items-center gap mbs-6" style="--row-gap: .5rem">
