--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -47,19 +47,12 @@
     <%= form.text_area :description, class: "input" %>
   </div>
 
-  <!-- Cover Picture Upload -->
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :image, "Upload an Image", class: "text-sm font-medium leading-none" %>
-    <%= form.file_field :image, class: "input" %>
-  </div>
-
-  <!-- ✅ New Poster Upload Field -->
   <div class="flex flex-col items-start gap-half mbe-4">
     <%= form.label :poster, "Upload Poster", class: "text-sm font-medium leading-none" %>
     <%= form.file_field :poster, class: "input" %>
   </div>
 
   <div class="inline-flex items-center mbs-2 mie-1">
-    <%= form.submit "Save Movie", class: "btn btn--primary" %>
+    <%= form.submit "Done", class: "btn btn--primary" %>
   </div>
 <% end %>
