--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,8 +14,8 @@
 
 
 <div class="flex flex-wrap items-center gap mbs-6" style="--row-gap: .5rem">
-  <%= link_to "Edit this movie", edit_movie_path(@movie), class: "btn" %>
-  <%= link_to "Back to movies", movies_path, class: "btn" %>
-  <%= button_to "Destroy this movie", @movie, method: :delete, class: "btn" %>
+  <%= link_to "Edit this Movie", edit_movie_path(@movie), class: "btn" %>
+  <%= link_to "Back to Movies", movies_path, class: "btn" %>
+  <%= button_to "Delete", @movie, method: :delete, class: "btn" %>
 </div>
 
