--- a/app/views/musics/_music.html.erb
+++ b/app/views/musics/_music.html.erb
@@ -1,7 +1,8 @@
 <div id="<%= dom_id(music) %>" class="flex flex-col gap">
+
   <!-- Image display -->
   <div class="flex justify-center">
-    <%= image_tag music.image, class: "music-image" if music.image.attached? %>
+    <%= image_tag music.poster, class: "music-poster" if music.poster.attached? %>
   </div>
 
   <div class="flex flex-col gap-half">
