--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,13 +1,16 @@
 <div id="<%= dom_id(movie) %>" class="flex flex-col gap p-4 rounded-xl shadow bg-white">
 
-  <div class="flex justify-center mb-4">
+  <div class="w-48 h-72 rounded overflow-hidden shadow-lg transform transition-transform duration-200 hover:scale-105">
     <% if movie.poster.attached? %>
-      <%= image_tag movie.poster, alt: "#{movie.title} cover", class: "w-40 h-auto rounded-lg shadow-md" %>
+      <%= image_tag movie.poster.variant(resize_to_fill: [200, 300]), alt: movie.title, class: "w-full h-full object-cover" %>
+    <% else %>
+      <div class="w-full h-full bg-gray-200 flex items-center justify-center">
+        <span class="text-sm text-gray-500">No Image</span>
+      </div>
     <% end %>
   </div>
 
-
-  <div class="flex flex-col gap-2">
+  <div class="flex flex-col gap-2 mt-4">
     <div>
       <h4 class="font-semibold">Title:</h4>
       <p><%= movie.title %></p>
