--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,5 +11,5 @@
 <div class="flex flex-wrap items-center gap mbs-6" style="--row-gap: .5rem">
   <%= link_to "Edit this book", edit_book_path(@book), class: "btn" %>
   <%= link_to "Back to books", books_path, class: "btn" %>
-  <%= button_to "Destroy this book", @book, method: :delete, class: "btn btn--danger" %>
+  <%= button_to "Destroy this book", @book, method: :delete, class: "btn" %>
 </div>
