--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -28,13 +28,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author %>
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label :publication_date %>
-    <%= form.date_select :publication_date %>
+    <%= form.label :publication_year %> <!-- Updated from release_date -->
+    <%= form.date_select :publication_year %>
   </div>
 
   <div class="actions">
