--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,8 +8,15 @@
 <div id="books" class="flex flex-col" style="gap: 2rem;">
   <% @books.each do |book| %>
     <div class="flex flex-col items-start gap">
-      <%= render book %>
-      <%= link_to "Show this book", book, class: "btn" %>
+      <%= link_to book_path(book) do %>
+        <% if book.cover_image.attached? %>
+          <%= image_tag book.cover_image.variant(resize_to_limit: [200, 300]), alt: book.title, class: "rounded shadow-lg hover:scale-105 transition-transform duration-200" %>
+        <% else %>
+          <div class="w-48 h-64 bg-gray-200 flex items-center justify-center rounded shadow-inner">
+            <span class="text-sm text-gray-500">No Image</span>
+          </div>
+        <% end %>
+      <% end %>
     </div>
   <% end %>
 </div>
