--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,8 +1,13 @@
 <div id="<%= dom_id(book) %>" class="flex flex-col gap">
-  <!-- Image display -->
-  <div class="flex justify-center">
-    <%= image_tag book.image, class: "book-image" if book.image.attached? %>
-  </div>
+
+<div class="w-48 h-72 rounded overflow-hidden shadow-lg transform transition-transform duration-200 hover:scale-105">
+  <% if book.poster.attached? %>
+    <%= image_tag book.poster.variant(resize_to_fill: [200, 300]), alt: book.title, class: "w-full h-full object-cover" %>
+  <% else %>
+    <div class="w-full h-full bg-gray-200 flex items-center justify-center">
+      <span class="text-sm text-gray-500">No Image</span>
+    </div>
+  <% end %>
 
   <div class="flex flex-col gap-half">
     <h4 class="font-medium leading-none">Title:</h4>
@@ -14,11 +19,11 @@
   </div>
   <div class="flex flex-col gap-half">
     <h4 class="font-medium leading-none">Year Published:</h4>
-    <p class="leading-none"><%= book.year_published %></p>
+    <p class="leading-none"><%= book.year %></p>
   </div>
   <div class="flex flex-col gap-half">
-    <h4 class="font-medium leading-none">Description:</h4>
-    <p class="leading-none"><%= book.description %></p>
+    <h4 class="font-medium leading-none">Summary:</h4>
+    <p class="leading-none"><%= book.summary %></p>
   </div>
 
   <div class="flex gap-2 mt-2">
