--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with(model: book, local: true, html: { enctype: 'multipart/form-data' }) do |form| %>
-  <% if book.errors.any? %>
+<%= form_with(model: @book, local: true, html: { enctype: 'multipart/form-data' }) do |form| %>
+  <% if @book.errors.any? %>
     <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
-      <h2 class="font-medium leading-none"><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <h2 class="font-medium leading-none"><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
       <ul class="text-sm mis-3" style="list-style: disc">
-        <% book.errors.each do |error| %>
+        <% @book.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
@@ -16,28 +16,43 @@
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :description, class: "text-sm font-medium leading-none" %>
-    <%= form.text_area :description, class: "input" %>
-  </div>
-
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :year_published, "Year Published", class: "text-sm font-medium leading-none" %>
-    <%= form.number_field :year_published, class: "input" %>
-  </div>
-
-  <div class="flex flex-col items-start gap-half mbe-4">
     <%= form.label :author, class: "text-sm font-medium leading-none" %>
     <%= form.text_field :author, class: "input" %>
   </div>
 
-  <!-- Image upload field -->
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :image, class: "text-sm font-medium leading-none" %>
-    <%= form.file_field :image, class: "input" %>
+    <%= form.label :summary, class: "text-sm font-medium leading-none" %>
+    <%= form.text_area :summary, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :year, "Year Published", class: "text-sm font-medium leading-none" %>
+    <%= form.number_field :year, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :genre, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :genre, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :rating, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :rating, class: "input" %>
+  </div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :franchise, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :franchise, class: "input" %>
+  </div>
+
+  <!-- Poster -->
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :poster, class: "text-sm font-medium leading-none" %>
+    <%= form.file_field :poster, class: "input" %>
   </div>
 
   <div class="inline-flex items-center mbs-2 mie-1">
-    <%= form.submit "Save Book", class: "btn btn--primary" %>
+    <%= form.submit "Done", class: "btn btn--primary" %>
   </div>
 <% end %>
 
