--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div id="books" class="flex flex-col" style="gap: 2rem;">
-  <% @books.each do |book| %>
+  <% @book.each do |book| %>
     <div class="flex flex-col items-start gap">
       <%= render book %>
       <%= link_to "Show this book", book, class: "btn" %>
