--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,41 +23,42 @@
 
   <body class="bg-gray-100 text-grey-900 font-sans">
     <header class="bg-blue-600 text-white py-4 shadow-md">
-      <div class="container mx-auto flex justify-between items-center px-4">
-        <nav class="space-x-4">
-          <%= link_to "Home", root_path, class: "px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white rounded-md transition" %>
-        </nav>
+      <div class="container mx-auto flex justify-between items-center px-6">
+      <div>
+        <%= link_to "Go Home", root_path, class: "text-3xl font-bold px-6 py-3 bg-blue-500 hover:bg-blue-700 text-white rounded-lg shadow-lg transition" %>
+      </div>
 
-        
-        <div class="relative inline-block text-left">
-          <button id="userDropdownBtn" class="btn">☰ Menu</button>
-          <div id="userDropdownMenu" class="dropdown-menu">
-            <ul>
-              <% if user_signed_in? %>
-                <li><%= link_to "Profile", edit_user_registration_path, class: "dropdown-item" %></li>
-              <% end %>
-              <li><%= link_to "My Movies", movies_path, class: "dropdown-item" %></li>
-              <li><%= link_to "My Books", books_path, class: "dropdown-item" %></li>
-              <li><%= link_to "My Music", musics_path, class: "dropdown-item" %></li>
-              <% if user_signed_in? %>
-                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item", data: { turbo_method: :delete } %></li>
-              <% end %>
-            </ul>
-          </div>
-        </div>
-
+      <div class="flex items-center space-x-4">
         <% if user_signed_in? %>
-          <div>
-            <p class="text-sm">Welcome, <%= current_user.email %>!</p>
-          </div>
+          <p class="text-sm">Welcome, <%= current_user.email %>!</p>
         <% else %>
           <div class="text-sm">
             <%= link_to "Login", new_user_session_path, class: "underline" %> |
             <%= link_to "Sign Up", new_user_registration_path, class: "underline" %>
           </div>
         <% end %>
+
+        <div class="relative inline-block text-right">
+          <button id="userDropdownBtn" class="px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white rounded-md transition">☰ Menu</button>
+          <div id="userDropdownMenu" class="dropdown-menu absolute right-0 mt-2 w-48 bg-white text-black rounded-md shadow-lg z-50 hidden">
+            <ul class="py-1">
+              <% if user_signed_in? %>
+                <li><%= link_to "Profile", edit_user_registration_path, class: "dropdown-item block px-4 py-2 hover:bg-gray-200" %></li>
+              <% end %>
+                <li><%= link_to "My Movies", movies_path, class: "dropdown-item block px-4 py-2 hover:bg-gray-2000" %></li>
+                <li><%= link_to "My Books", books_path, class: "dropdown-item block px-4 py-2 hover:bg-gray-2000" %></li>
+                <li><%= link_to "My Music", musics_path, class: "dropdown-item block px-4 py-2 hover:bg-gray-2000" %></li>
+              <% if user_signed_in? %>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item block px-4 py-2 hover:bg-gray-200", data: { turbo_method: :delete } %></li>
+              <% end %>
+          </ul>
+        </div>
       </div>
-    </header>
+    </div>
+  </div>
+</header>
+
+
 
     <main class="container mx-auto py-6 px-4">
       <% if flash[:notice] %>
