--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -41,15 +41,16 @@
     <%= form.text_field :album, class: "input" %>
   </div>
 
+  <!-- Genre -->
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :genre, class: "text-sm font-medium leading-none" %>
+    <%= form.text_field :genre, class: "input" %>
+  </div>
+
   <!-- Description -->
   <div class="flex flex-col items-start gap-half mbe-4">
     <%= form.label :description, class: "text-sm font-medium leading-none" %>
     <%= form.text_area :description, class: "input" %>
-  </div>
-
-  <div class="flex flex-col items-start gap-half mbe-4">
-  <%= form.label :rating, "Rating", class: "text-sm font-medium leading-none" %>
-  <%= form.number_field :rating, class: "input" %>
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
