--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -12,7 +12,7 @@
         <%= link_to movie_path(movie), class: "group" do %>
           <div class="w-48 h-72 rounded overflow-hidden shadow-lg transform transition-transform duration-200 group-hover:scale-105">
             <% if movie.poster.attached? %>
-              <%= image_tag movie.poster.variant(resize_to_fill: [200, 300]), alt: movie.title, class: "w-full h-full object-cover" %>
+              <%= image_tag movie.poster.variant(resize_to_fill: [200, 300]), class: "w-full h-full object-cover" %>
             <% else %>
               <div class="w-full h-full bg-gray-200 flex items-center justify-center">
                 <span class="text-sm text-gray-500 text-center">No Image</span>
